--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,13 @@ body.offcanvas {
 
 .hire {
   padding: 2em;
-  background: #2c98f0;
+  /* background: #2c98f0; */
+  /* background : radial-gradient(225deg, rgb(44, 152, 240) -50%, rgb(194, 233, 251) 100%); */
+  background-color: #2c98f0;
+  background-image: linear-gradient(19deg, #2c98f0 0%, #c2e9fb 100%);
+
+  /* background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%); */
+  
  }
   .hire h2 {
     line-height: 1.5; }
